# scaffold-stack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-binaries.yml  release.yml
cli/: Cargo.toml  README.MD
cli/src/: error.rs  main.rs
cli/src/commands/: doctor.rs
cli/test/: integration.rs
cli/tests/: integration.rs
crates/codegen/: Cargo.toml  README.MD
crates/codegen/src/: lib.rs
crates/codegen/templates/: contracts.ts.tera  debug_ui.tsx.tera  hooks.ts.tera
crates/deployer/: Cargo.toml  README.MD
crates/deployer/src/: lib.rs  ui.rs
crates/parser/: Cargo.toml  README.MD
crates/parser/src/: lib.rs
crates/process_supervisor/: Cargo.toml  README.MD
crates/process_supervisor/src/: lib.rs
crates/scaffold/: Cargo.toml  README.MD
crates/scaffold/contracts-template/: package-lock.json
crates/scaffold/frontend-template/: .gitignore  env.local.example  package-lock.json  package.json  tsconfig.json
crates/scaffold/frontend-template/scripts/: build-tx.mjs  export-abi.mjs
crates/scaffold/frontend-template/src/: scaffold.config.ts
crates/scaffold/frontend-template/src/components/: Footer.tsx  Header.tsx  Message.tsx  NetworkBadge.tsx  WalletConnect.tsx
crates/scaffold/frontend-template/src/components/debug/: DebugContracts.tsx
crates/scaffold/frontend-template/src/lib/: devnet.ts
crates/scaffold/src/: cli_style.rs  lib.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs  project.rs  steps.rs
crates/watcher/: Cargo.toml  README.MD
crates/watcher/src/: lib.rs
frontend-template/: package.json  tailwind.config.ts
frontend-template/scripts/: build-tx.mjs  export-abi.mjs
frontend-template/src/: scaffold.config.ts
frontend-template/src/app/: globals.css  layout.tsx  page.tsx
frontend-template/src/components/: About.tsx  Footer.tsx  NetworkBadge.tsx  WalletConnect.tsx
frontend-template/src/components/debug/: DebugContracts.tsx
frontend-template/src/lib/: devnet.ts
frontend-template/src/store/: wallet.ts
npm/: README.md  package.json
scripts/: check-versions.sh  ci-frontend.sh  ci-smoke.sh  verify-audit-fixes.sh  verify-e2e.sh  verify-production-hardening.sh
templates/: contracts.ts.tera  debug_ui.tsx.tera  hooks.ts.tera
