[package]
name    = "stacksdapp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stacksdapp"
path = "src/main.rs"

[dependencies]
stacksdapp-scaffold           = { path = "../crates/scaffold" }
stacksdapp-parser             = { path = "../crates/parser" }
stacksdapp-codegen            = { path = "../crates/codegen" }
stacksdapp-watcher            = { path = "../crates/watcher" }
stacksdapp-deployer           = { path = "../crates/deployer" }
stacksdapp-process-supervisor = { path = "../crates/process_supervisor" }
clap.workspace      = true
tokio.workspace     = true
anyhow.workspace    = true
colored.workspace   = true
indicatif.workspace = true
