[package]
name    = "stacksdapp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stacksdapp"
path = "src/main.rs"

[dependencies]
stacksdapp-scaffold           = {version = "0.1.0", path = "../crates/scaffold" }
stacksdapp-parser             = {version = "0.1.0", path = "../crates/parser" }
stacksdapp-codegen            = {version = "0.1.0", path = "../crates/codegen" }
stacksdapp-watcher            = {version = "0.1.0", path = "../crates/watcher" }
stacksdapp-deployer           = {version = "0.1.0", path = "../crates/deployer" }
stacksdapp-process-supervisor = {version = "0.1.0", path = "../crates/process_supervisor" }
clap.workspace      = true
tokio.workspace     = true
anyhow.workspace    = true
colored.workspace   = true
indicatif.workspace = true
