[package]
name    = "stacksdapp"
version = "0.1.6"
edition = "2021"
description = "The official stacksdapp CLI: A complete toolkit to scaffold, build, and deploy full-stack Bitcoin applications on Stacks."
license     = "MIT"
repository  = "https://github.com/scaffold-stack/scaffold-stack"
homepage    = "https://github.com/scaffold-stack/scaffold-stack"

[[bin]]
name = "stacksdapp"
path = "src/main.rs"

[dependencies]
stacksdapp-scaffold           = {version = "0.1.5", path = "../crates/scaffold" }
stacksdapp-parser             = {version = "0.1.1", path = "../crates/parser" }
stacksdapp-codegen            = {version = "0.1.4", path = "../crates/codegen" }
stacksdapp-watcher            = {version = "0.1.2", path = "../crates/watcher" }
stacksdapp-deployer           = {version = "0.1.3", path = "../crates/deployer" }
stacksdapp-process-supervisor = {version = "0.1.3", path = "../crates/process_supervisor" }
clap.workspace      = true
tokio.workspace     = true
anyhow.workspace    = true
colored.workspace   = true
indicatif.workspace = true
