[package]
name = "stacksdapp-codegen"
version = "0.1.0"
edition = "2021"
description = "Codegen engine for stacksdapp Clarity ABIs"

include = [
    "src/**/*",
    "templates/**/*",
    "Cargo.toml"
]

[dependencies]
anyhow.workspace     = true
serde.workspace      = true
serde_json.workspace = true
tera.workspace       = true
tokio.workspace      = true
stacksdapp-parser    = {version = "0.1.0", path = "../parser" }
sha2 = "0.10"
