[package]
name = "stacksdapp-parser"
version = "0.1.1"
edition = "2021"
description = "A core library for parsing Clarity smart contracts and extracting ABIs for the Stacks blockchain."
license     = "MIT"
repository  = "https://github.com/scaffold-stack/scaffold-stack"
homepage    = "https://github.com/scaffold-stack/scaffold-stack"

[dependencies]
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
tokio.workspace      = true

[dev-dependencies]
tempfile.workspace = true
