[package]
name = "stacksdapp-scaffold"
version = "0.1.0"
edition = "2021"
description = "Scaffolding engine for stacksdapp"

include = [
    "src/**/*",
    "frontend-template/**/*",
    "Cargo.toml"
]

[dependencies]
anyhow.workspace     = true
tokio.workspace      = true
fs_extra.workspace   = true
which.workspace      = true
stacksdapp-codegen  = {version = "0.1.0", path = "../codegen" }
include_dir = "0.7"
indicatif.workspace = true
