[package]
name = "stacksdapp-scaffold"
version = "0.1.1"
edition = "2021"
description = "The asset provider and scaffolding engine containing the Next.js frontend templates and project initialization logic."
license     = "MIT"
repository  = "https://github.com/scaffold-stack/scaffold-stack"
homepage    = "https://github.com/scaffold-stack/scaffold-stack"

include = [
    "src/**/*",
    "frontend-template/**/*",
    "Cargo.toml"
]

[dependencies]
anyhow.workspace     = true
tokio.workspace      = true
fs_extra.workspace   = true
which.workspace      = true
stacksdapp-codegen  = {version = "0.1.1", path = "../codegen" }
include_dir = "0.7"
indicatif.workspace = true
